Add conversion between index spaces

The lack of conversion was causing an offset error because some of the
numbers being used were in the character list index space and some of
them were in the text buffer index space. This CL combined with
https://pdfium-review.googlesource.com/c/pdfium/+/20014 in PDFium
resolves outstanding issues with Find highlights in PDFs with control
characters in the text body.

BUG=chromium:654578

Change-Id: I5f600a59926f137ed0a0901711a3ff57d3e42e34
Reviewed-on: https://chromium-review.googlesource.com/801310
Reviewed-by: dsinclair <dsinclair@chromium.org>
Commit-Queue: Ryan Harrison <rharrison@chromium.org>
Cr-Commit-Position: refs/heads/master@{#520666}
Former-commit-id: 99088a45b34bccdbb7fc16bdaf0952ce966d17ef